// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pet looks up a pet 1`] = `
Object {
  "petOnNeopetsDotCom": Object {
    "color": Object {
      "id": "75",
      "name": "Starry",
    },
    "items": Array [
      Object {
        "description": "What does this ball actually do?",
        "id": "37229",
        "isNc": false,
        "name": "Magic Ball Table",
        "rarityIndex": 101,
        "thumbnailUrl": "http://images.neopets.com/items/gif_magicball_table.gif",
      },
      Object {
        "description": "Dont forget to wish upon a star.",
        "id": "37375",
        "isNc": false,
        "name": "Moon and Stars Background",
        "rarityIndex": 75,
        "thumbnailUrl": "http://images.neopets.com/items/bg_moonstars.gif",
      },
      Object {
        "description": "Hide your face and hair so no one can recognise you.",
        "id": "38911",
        "isNc": false,
        "name": "Zafara Agent Hood",
        "rarityIndex": 92,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_hood.gif",
      },
      Object {
        "description": "This robe is great for being stealthy.",
        "id": "38912",
        "isNc": false,
        "name": "Zafara Agent Robe",
        "rarityIndex": 90,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_robe.gif",
      },
      Object {
        "description": "Dont leave any trace that you were there with these gloves.",
        "id": "38913",
        "isNc": false,
        "name": "Zafara Agent Gloves",
        "rarityIndex": 88,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_gloves.gif",
      },
      Object {
        "description": "These leaves almost look magical with their gentle glow.",
        "id": "43014",
        "isNc": false,
        "name": "Green Leaf String Lights",
        "rarityIndex": 80,
        "thumbnailUrl": "http://images.neopets.com/items/toy_stringlight_illleaf.gif",
      },
      Object {
        "description": "This jewelled staff shines with a magical light.",
        "id": "43397",
        "isNc": true,
        "name": "Jewelled Staff",
        "rarityIndex": 500,
        "thumbnailUrl": "http://images.neopets.com/items/mall_staff_jewelled.gif",
      },
      Object {
        "description": "Even the announcers of the Altador Cup celebrate.  This was given out by the Advent Calendar in Y11.",
        "id": "48313",
        "isNc": false,
        "name": "Altador Cup Brooch",
        "rarityIndex": 101,
        "thumbnailUrl": "http://images.neopets.com/items/clo_altcuplogo_brooch.gif",
      },
    ],
    "pose": "SAD_MASC",
    "species": Object {
      "id": "54",
      "name": "Zafara",
    },
  },
}
`;

exports[`Pet models new item data 1`] = `
Object {
  "petOnNeopetsDotCom": Object {
    "items": Array [
      Object {
        "description": "What does this ball actually do?",
        "id": "37229",
        "isNc": false,
        "name": "Magic Ball Table",
        "rarityIndex": 101,
        "thumbnailUrl": "http://images.neopets.com/items/gif_magicball_table.gif",
      },
      Object {
        "description": "Dont forget to wish upon a star.",
        "id": "37375",
        "isNc": false,
        "name": "Moon and Stars Background",
        "rarityIndex": 75,
        "thumbnailUrl": "http://images.neopets.com/items/bg_moonstars.gif",
      },
      Object {
        "description": "Hide your face and hair so no one can recognise you.",
        "id": "38911",
        "isNc": false,
        "name": "Zafara Agent Hood",
        "rarityIndex": 92,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_hood.gif",
      },
      Object {
        "description": "This robe is great for being stealthy.",
        "id": "38912",
        "isNc": false,
        "name": "Zafara Agent Robe",
        "rarityIndex": 90,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_robe.gif",
      },
      Object {
        "description": "Dont leave any trace that you were there with these gloves.",
        "id": "38913",
        "isNc": false,
        "name": "Zafara Agent Gloves",
        "rarityIndex": 88,
        "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_gloves.gif",
      },
      Object {
        "description": "These leaves almost look magical with their gentle glow.",
        "id": "43014",
        "isNc": false,
        "name": "Green Leaf String Lights",
        "rarityIndex": 80,
        "thumbnailUrl": "http://images.neopets.com/items/toy_stringlight_illleaf.gif",
      },
      Object {
        "description": "This jewelled staff shines with a magical light.",
        "id": "43397",
        "isNc": true,
        "name": "Jewelled Staff",
        "rarityIndex": 500,
        "thumbnailUrl": "http://images.neopets.com/items/mall_staff_jewelled.gif",
      },
      Object {
        "description": "Even the announcers of the Altador Cup celebrate.  This was given out by the Advent Calendar in Y11.",
        "id": "48313",
        "isNc": false,
        "name": "Altador Cup Brooch",
        "rarityIndex": 101,
        "thumbnailUrl": "http://images.neopets.com/items/clo_altcuplogo_brooch.gif",
      },
    ],
  },
}
`;

exports[`Pet models new item data 2`] = `
Array [
  Array [
    "SELECT * FROM items WHERE id IN (?,?,?,?,?,?,?,?)",
    Array [
      "37229",
      "37375",
      "38911",
      "38912",
      "38913",
      "43014",
      "43397",
      "48313",
    ],
  ],
  Array [
    "SELECT * FROM item_translations WHERE item_id IN (?,?,?,?,?,?,?,?) AND locale = \\"en\\"",
    Array [
      "37229",
      "37375",
      "38911",
      "38912",
      "38913",
      "43014",
      "43397",
      "48313",
    ],
  ],
  Array [
    "INSERT INTO items (category, created_at, id, price, rarity_index, thumbnail_url, type, updated_at, weight_lbs, zones_restrict) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?, ?, ?, ?);",
    Array [
      "Gift",
      2020-01-01T00:00:00.000Z,
      "37229",
      0,
      101,
      "http://images.neopets.com/items/gif_magicball_table.gif",
      "Gift",
      2020-01-01T00:00:00.000Z,
      1,
      "0000000000000000000000000000000000000000000000",
      "Special",
      2020-01-01T00:00:00.000Z,
      "37375",
      209,
      75,
      "http://images.neopets.com/items/bg_moonstars.gif",
      "Mystical Surroundings",
      2020-01-01T00:00:00.000Z,
      1,
      "0000000000000000000000000000000000000000000000000000",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      "38911",
      980,
      92,
      "http://images.neopets.com/items/clo_zafara_agent_hood.gif",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      1,
      "0000000000000000000000000000000000001100000000000000",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      "38912",
      1476,
      90,
      "http://images.neopets.com/items/clo_zafara_agent_robe.gif",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      1,
      "0000000000000000000101000000000000000000000000000000",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      "38913",
      1177,
      88,
      "http://images.neopets.com/items/clo_zafara_agent_gloves.gif",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      1,
      "0000000000000000000000000000000000000000000000000000",
      "Toys",
      2020-01-01T00:00:00.000Z,
      "43014",
      1033,
      80,
      "http://images.neopets.com/items/toy_stringlight_illleaf.gif",
      "Toy",
      2020-01-01T00:00:00.000Z,
      1,
      "0000000000000000000000000000000000000000000000",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      "43397",
      0,
      500,
      "http://images.neopets.com/items/mall_staff_jewelled.gif",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      1,
      "0000000000000000000000000000000000000000000000",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      "48313",
      0,
      101,
      "http://images.neopets.com/items/clo_altcuplogo_brooch.gif",
      "Clothes",
      2020-01-01T00:00:00.000Z,
      1,
      "0000000000000000000000000000000000000000000000000000",
    ],
  ],
  Array [
    "INSERT INTO item_translations (created_at, description, item_id, locale, name, rarity, updated_at) VALUES (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?), (?, ?, ?, ?, ?, ?, ?);",
    Array [
      2020-01-01T00:00:00.000Z,
      "What does this ball actually do?",
      "37229",
      "en",
      "Magic Ball Table",
      "Special",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "Dont forget to wish upon a star.",
      "37375",
      "en",
      "Moon and Stars Background",
      "Uncommon",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "Hide your face and hair so no one can recognise you.",
      "38911",
      "en",
      "Zafara Agent Hood",
      "Very Rare",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "This robe is great for being stealthy.",
      "38912",
      "en",
      "Zafara Agent Robe",
      "Very Rare",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "Dont leave any trace that you were there with these gloves.",
      "38913",
      "en",
      "Zafara Agent Gloves",
      "Rare",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "These leaves almost look magical with their gentle glow.",
      "43014",
      "en",
      "Green Leaf String Lights",
      "Uncommon",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "This jewelled staff shines with a magical light.",
      "43397",
      "en",
      "Jewelled Staff",
      "Artifact",
      2020-01-01T00:00:00.000Z,
      2020-01-01T00:00:00.000Z,
      "Even the announcers of the Altador Cup celebrate.  This was given out by the Advent Calendar in Y11.",
      "48313",
      "en",
      "Altador Cup Brooch",
      "Special",
      2020-01-01T00:00:00.000Z,
    ],
  ],
]
`;

exports[`Pet models new item data 3`] = `
Object {
  "items": Array [
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "What does this ball actually do?",
      "id": "37229",
      "isNc": false,
      "name": "Magic Ball Table",
      "rarityIndex": 101,
      "thumbnailUrl": "http://images.neopets.com/items/gif_magicball_table.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "Dont forget to wish upon a star.",
      "id": "37375",
      "isNc": false,
      "name": "Moon and Stars Background",
      "rarityIndex": 75,
      "thumbnailUrl": "http://images.neopets.com/items/bg_moonstars.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "Hide your face and hair so no one can recognise you.",
      "id": "38911",
      "isNc": false,
      "name": "Zafara Agent Hood",
      "rarityIndex": 92,
      "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_hood.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "This robe is great for being stealthy.",
      "id": "38912",
      "isNc": false,
      "name": "Zafara Agent Robe",
      "rarityIndex": 90,
      "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_robe.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "Dont leave any trace that you were there with these gloves.",
      "id": "38913",
      "isNc": false,
      "name": "Zafara Agent Gloves",
      "rarityIndex": 88,
      "thumbnailUrl": "http://images.neopets.com/items/clo_zafara_agent_gloves.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "These leaves almost look magical with their gentle glow.",
      "id": "43014",
      "isNc": false,
      "name": "Green Leaf String Lights",
      "rarityIndex": 80,
      "thumbnailUrl": "http://images.neopets.com/items/toy_stringlight_illleaf.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "This jewelled staff shines with a magical light.",
      "id": "43397",
      "isNc": true,
      "name": "Jewelled Staff",
      "rarityIndex": 500,
      "thumbnailUrl": "http://images.neopets.com/items/mall_staff_jewelled.gif",
    },
    Object {
      "createdAt": "2020-01-01T00:00:00.000Z",
      "description": "Even the announcers of the Altador Cup celebrate.  This was given out by the Advent Calendar in Y11.",
      "id": "48313",
      "isNc": false,
      "name": "Altador Cup Brooch",
      "rarityIndex": 101,
      "thumbnailUrl": "http://images.neopets.com/items/clo_altcuplogo_brooch.gif",
    },
  ],
}
`;
